projet testé et fonctionne

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <footer>
-  <p>Posted by: Athanasia</p>
+  <p>Posted by: Vanessa Huhn</p>
   <p>Contact information: <a href="mailto:someone@example.com">
-  someone@example.com</a>.</p>
+  vanessa.huhn@hgmail.com</a>.</p>
 </footer>
 </body>
 </html>
